--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cart"
+name = "cart-cache"
 description = "CART cache replacement policy"
 version = "0.1.0"
 homepage = "https://github.com/jedisct1/rust-cart"
