--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cart-cache"
 description = "CART cache replacement policy"
-version = "0.1.2"
+version = "0.1.3"
 homepage = "https://github.com/jedisct1/rust-cart"
 keywords = ["cache"]
 license = "MIT"
@@ -13,7 +13,7 @@ travis-ci = { repository = "jedisct1/rust-cart-cache" }
 appveyor = { repository = "jedisct1/rust-cart-cache" }
 
 [dependencies]
-slab = "~0.4.2"
+slab = "0.4.2"
 
 [dev-dependencies]
-rand = "~0.7.2"
+rand = "0.7.2"
